--- a/ops-work-order-system/src/main/resources/templates/admin/users.html
+++ b/ops-work-order-system/src/main/resources/templates/admin/users.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/departments}">部门管理</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/workflow}">工作流管理</a>
+                    </li>
                     <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                         <a class="nav-link active" th:href="@{/admin/users}">用户管理</a>
                     </li>
