--- a/ops-work-order-system/src/main/resources/templates/departments/permissions.html
+++ b/ops-work-order-system/src/main/resources/templates/departments/permissions.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/workflow}">工作流管理</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/statistics}">统计报表</a>
+                    </li>
                     <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                         <a class="nav-link" th:href="@{/admin/users}">用户管理</a>
                     </li>
