--- a/ops-work-order-system/src/main/resources/templates/work-orders/details.html
+++ b/ops-work-order-system/src/main/resources/templates/work-orders/details.html
@@ -7,6 +7,7 @@
     <meta name="_csrf_header" th:content="${_csrf != null} ? ${_csrf.headerName} : ''"/>
     <title>工单详情 - 运维工单系统</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <style>
         .card {
@@ -97,6 +98,10 @@
             <h2>工单详情</h2>
             <div>
                 <a th:href="@{/work-orders}" class="btn btn-secondary">返回列表</a>
+                <a th:href="@{'/transfer/create?workOrderId=' + ${workOrder.id}}" 
+                   class="btn btn-warning ms-2">
+                    <i class="bi bi-arrow-left-right"></i> 转派工单
+                </a>
                 <button class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#updateStatusModal">
                     更新状态
                 </button>
