--- a/ops-work-order-system/src/main/resources/templates/workflow/my-approvals.html
+++ b/ops-work-order-system/src/main/resources/templates/workflow/my-approvals.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" th:href="@{/work-orders}">工单管理</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/work-order-types}">类型管理</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/departments}">部门管理</a>
                     </li>
                     <li class="nav-item">
